surse/err84.txt
prob84.cpp: In constructor ‘D::D()’:
prob84.cpp:20:11: error: ‘int B::x’ is private within this context
     D() { x++; }
           ^